--- a/src/Sakamoto_frontend/package.json
+++ b/src/Sakamoto_frontend/package.json
@@ -27,6 +27,7 @@
     "@dfinity/agent": "^3.0.0",
     "@dfinity/candid": "^3.0.0",
     "@dfinity/principal": "^3.0.0",
-    "lit-html": "^2.8.0"
+    "lit-html": "^2.8.0",
+    "react-router-dom": "^7.9.6"
   }
 }
